force-app/main/default/objects/TransactionalData__c/TransactionalData__c.object-meta.xml
<CustomObject>
    <label>Transactional Data</label>
    <nameField>
        <label>Transaction</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactional Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>