force-app/main/default/objects/TransactionalData__c/fields/AvailableCredit__c.field-meta.xml
<CustomField>
    <fullName>AvailableCredit__c</fullName>
    <label>Available Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>