force-app/main/default/objects/TransactionalData__c/fields/Confirm_ReportDate_Today__c.field-meta.xml
<CustomField>
    <fullName>Confirm_ReportDate_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Report Date is Today</label>
    <type>Checkbox</type>
</CustomField>