force-app/main/default/objects/TransactionalData__c/fields/Current_month__c.field-meta.xml
<CustomField>
    <fullName>Current_month__c</fullName>
    <formula>AND(MONTH(ReportDate__c)=MONTH(TODAY()), YEAR(ReportDate__c)=YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current month</label>
    <type>Checkbox</type>
</CustomField>