force-app/main/default/objects/TransactionalData__c/fields/Day_Number__c.field-meta.xml
<CustomField>
    <fullName>Day_Number__c</fullName>
    <formula>Today() - ReportDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>