force-app/main/default/objects/TransactionalData__c/fields/DayIssueCount__c.field-meta.xml
<CustomField>
    <fullName>DayIssueCount__c</fullName>
    <label>Day Issue Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>