force-app/main/default/objects/TransactionalData__c/fields/DayIssueValue__c.field-meta.xml
<CustomField>
    <fullName>DayIssueValue__c</fullName>
    <label>Day Issue Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>