force-app/main/default/objects/TransactionalData__c/fields/Days_from_First_Day__c.field-meta.xml
<CustomField>
    <fullName>Days_from_First_Day__c</fullName>
    <formula>Today () - First_Transaction_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days from First Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>