force-app/main/default/objects/TransactionalData__c/fields/DaySettledCount__c.field-meta.xml
<CustomField>
    <fullName>DaySettledCount__c</fullName>
    <label>Daily Settled Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>