force-app/main/default/objects/TransactionalData__c/fields/DaySettledValue__c.field-meta.xml
<CustomField>
    <fullName>DaySettledValue__c</fullName>
    <label>Daily Settled Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>