force-app/main/default/objects/TransactionalData__c/fields/DayTotalSettledTargetValue__c.field-meta.xml
<CustomField>
    <fullName>DayTotalSettledTargetValue__c</fullName>
    <label>DayTotalSettledTargetValue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>