force-app/main/default/objects/TransactionalData__c/fields/ECN__c.field-meta.xml
<CustomField>
    <fullName>ECN__c</fullName>
    <label>ECN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>