force-app/main/default/objects/TransactionalData__c/fields/EcnReportDatePrimaryKey__c.field-meta.xml
<CustomField>
    <fullName>EcnReportDatePrimaryKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>EcnReportDatePrimaryKey</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>