force-app/main/default/objects/TransactionalData__c/fields/First_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Transaction_Date__c</fullName>
    <formula>LinkedAccount__r.First_Transaction_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Transaction Date</label>
    <type>Date</type>
</CustomField>