force-app/main/default/objects/TransactionalData__c/fields/Flag_for_delete__c.field-meta.xml
<CustomField>
    <fullName>Flag_for_delete__c</fullName>
    <formula>AND(NOT(Last_day_of_month__c),NOT(Current_month__c),IF( (TODAY() - ReportDate__c ) &gt; 10, TRUE, FALSE) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag for delete</label>
    <type>Checkbox</type>
</CustomField>