force-app/main/default/objects/TransactionalData__c/fields/Include_In_Monthly_Report__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Monthly_Report__c</fullName>
    <formula>OR(AND(NOT(Current_month__c), Last_day_of_month__c),
AND(Current_month__c, ReportDate__c = LinkedAccount__r.Last_Transaction_Report_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include In Monthly Report</label>
    <type>Checkbox</type>
</CustomField>