force-app/main/default/objects/TransactionalData__c/fields/Incorrect__c.field-meta.xml
<CustomField>
    <fullName>Incorrect__c</fullName>
    <formula>First_Transaction_Date__c &gt; ReportDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incorrect</label>
    <type>Checkbox</type>
</CustomField>