force-app/main/default/objects/TransactionalData__c/fields/Largest_monthly_settled_value_for_month__c.field-meta.xml
<CustomField>
    <fullName>Largest_monthly_settled_value_for_month__c</fullName>
    <formula>OR(AND(Current_month__c,LinkedAccount__r.Last_Transaction_Report_Date__c=ReportDate__c),Last_day_of_month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Largest monthly settled value for month</label>
    <type>Checkbox</type>
</CustomField>