force-app/main/default/objects/TransactionalData__c/fields/Last_day_of_month__c.field-meta.xml
<CustomField>
    <fullName>Last_day_of_month__c</fullName>
    <formula>DAY(ReportDate__c+1)=1</formula>
    <label>Last day of month</label>
    <type>Checkbox</type>
</CustomField>