force-app/main/default/objects/TransactionalData__c/fields/LinkedAccount__c.field-meta.xml
<CustomField>
    <fullName>LinkedAccount__c</fullName>
    <label>Linked Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactional Data</relationshipLabel>
    <relationshipName>Transactional_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>