force-app/main/default/objects/TransactionalData__c/fields/MonthlyIssueCount__c.field-meta.xml
<CustomField>
    <fullName>MonthlyIssueCount__c</fullName>
    <label>Monthly Issue Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>