force-app/main/default/objects/TransactionalData__c/fields/MonthlyIssueValue__c.field-meta.xml
<CustomField>
    <fullName>MonthlyIssueValue__c</fullName>
    <label>Monthly Issue Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>