force-app/main/default/objects/TransactionalData__c/fields/MonthlySettledCount__c.field-meta.xml
<CustomField>
    <fullName>MonthlySettledCount__c</fullName>
    <label>Monthly Settled Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>