force-app/main/default/objects/TransactionalData__c/fields/MonthlySettledTarget__c.field-meta.xml
<CustomField>
    <fullName>MonthlySettledTarget__c</fullName>
    <label>Monthly Settled Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>