force-app/main/default/objects/TransactionalData__c/fields/MonthlySettledValue__c.field-meta.xml
<CustomField>
    <fullName>MonthlySettledValue__c</fullName>
    <label>Monthly Settled Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>