force-app/main/default/objects/TransactionalData__c/fields/Months_From_First_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Months_From_First_Transaction__c</fullName>
    <formula>((Year(Today())-YEAR(LinkedAccount__r.First_Transaction_Date__c)-1)*12)+(12 - MONTH(LinkedAccount__r.First_Transaction_Date__c) +1) + MONTH(Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months From First Transaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>