force-app/main/default/objects/TransactionalData__c/fields/Report_Year__c.field-meta.xml
<CustomField>
    <fullName>Report_Year__c</fullName>
    <formula>TEXT(YEAR(ReportDate__c))</formula>
    <label>Report Year</label>
    <type>Text</type>
</CustomField>