force-app/main/default/objects/TransactionalData__c/fields/ReportDate__c.field-meta.xml
<CustomField>
    <fullName>ReportDate__c</fullName>
    <description>The date the report was actually made for; not necessarily the date the data was copied!</description>
    <label>Report Date</label>
    <type>Date</type>
</CustomField>