force-app/main/default/objects/TransactionalData__c/fields/Year_Month__c.field-meta.xml
<CustomField>
    <fullName>Year_Month__c</fullName>
    <formula>TEXT(YEAR(ReportDate__c))&amp;CASE(MONTH( ReportDate__c), 1, &quot;01&quot;, 2, &quot;02&quot;, 3, &quot;03&quot;, 4, &quot;04&quot;, 5, &quot;05&quot;, 6, &quot;06&quot;, 7, &quot;07&quot;, 8, &quot;08&quot;, 9, &quot;09&quot;, 10, &quot;10&quot;, 11, &quot;11&quot;, 12, &quot;12&quot;, &quot;None&quot;)&amp;&quot;-&quot;&amp;CASE(MONTH( ReportDate__c), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)&amp; &quot; &quot; &amp; TEXT(YEAR(ReportDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Month</label>
    <type>Text</type>
</CustomField>