force-app/main/default/objects/TransactionalData__c/fields/YearlyIssueCount__c.field-meta.xml
<CustomField>
    <fullName>YearlyIssueCount__c</fullName>
    <label>Yearly Issue Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>