force-app/main/default/objects/TransactionalData__c/fields/YearlyIssueValue__c.field-meta.xml
<CustomField>
    <fullName>YearlyIssueValue__c</fullName>
    <label>Yearly Issue Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>