force-app/main/default/objects/TransactionalData__c/fields/YearlySettledCount__c.field-meta.xml
<CustomField>
    <fullName>YearlySettledCount__c</fullName>
    <label>Yearly Settled Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>