force-app/main/default/objects/TransactionalData__c/fields/YearlySettledTarget__c.field-meta.xml
<CustomField>
    <fullName>YearlySettledTarget__c</fullName>
    <label>Yearly Settled Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>