force-app/main/default/objects/TransactionalData__c/fields/YearlySettledValue__c.field-meta.xml
<CustomField>
    <fullName>YearlySettledValue__c</fullName>
    <label>Yearly Settled Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>