force-app/main/default/objects/TransactionalData__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ECN__c</columns>
    <columns>NAME</columns>
    <columns>ReportDate__c</columns>
    <columns>DaySettledValue__c</columns>
    <columns>DayTotalSettledTargetValue__c</columns>
    <columns>Flag_for_delete__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>